# zlib-dylib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.zlib  README.md
.github/workflows/: build_dylib.yml  cmake-single-platform.yml
